--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -9,8 +9,5 @@ project(htmlanim_docs)
 add_executable(htmlanim_docs generate_index.cpp)
 target_include_directories(htmlanim_docs PUBLIC ..)
 
-add_executable(ea_demo ea_demo.cpp)
-target_include_directories(ea_demo PUBLIC ..)
-
-add_executable(ea_vis1 ea_vis1.cpp)
-target_include_directories(ea_vis1 PUBLIC ..)
+add_executable(offscreens offscreens.cpp)
+target_include_directories(offscreens PUBLIC ..)
